--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Table Scanner</string>
     <string name="action_settings">Settings</string>
-    <string name="preview_description">Image and Video preview will appear here</string>
+    <string name="preview_description">Image will appear here</string>
     <string name="btn_take_picture">Take Picture</string>
     <string name="btn_record_video">Record Video</string>
 </resources>
